add CRUD Define model
